--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 </head>
+<style>
+    body{
+        text-align: center;
+    }
+</style>
 <body>
-    <h1>
-        Hello World
-    </h1>
+    <div>
+        <h1>Hey, this is the heading for the page</h1>
+    </div>
+    <div>
+        <p>This is a part of main content area of the page. I can hold any content of any length here
+
+        </p>
+    </div>
+    <div>
+        <p>This is the content for right sidebar</p>
+    </div>
+    <div>
+        <p>This is the basic footer content
+
+</p>
+    </div>
+    <div>
+        <button>
+        Submit
+        </button>
+    </div>
 </body>
 </html>
