--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     body{
         text-align: center;
     }
+    #firstName{
+        margin-top: 20px;
+    }
 </style>
 <body>
     <div>
@@ -26,6 +29,17 @@
         <p>This is the basic footer content
 
 </p>
+    </div>
+    <div>
+        <label for="firstName">First Name: </label><input type="text" name="" id="firstName" placeholder="My Name">
+        <br>
+        <label for="lastName">Last Name: </label><input type="text" name="" id="lastName" placeholder="My Name">
+        <br>
+        <label for="mail">Email :</label><input id="mail" type="email" placeholder="M@M.com">
+        <br>
+        <label for="userName">UserName :</label><input id="userName" type="text" placeholder="UserName...">
+        <br>
+
     </div>
     <div>
         <button>
